# it2ag

./: .gitignore  README.md  it2ag.spec  pyproject.toml  renovate.json5
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: it2ag.rb
scripts/: build-binary.sh
src/it2ag/: __init__.py  __main__.py  autolaunch.py  detector.py  server.py  session_state.py  ui.py
tests/: test_autolaunch.py  test_detector.py  test_main.py  test_server.py  test_session_state.py
